Sun Apr 10 02:10:56 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/descriptions_store.c (store_descriptions): Ensure that the
	  target of a symlink or .so chain is always recorded as a real
	  page.  Fixes mandb-2 test failures.
	* NEWS: Document this.

Sun Apr 10 01:55:28 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/tests/mandb-2: Test the case where a manual page changes from
	  a symbolic link to a regular file, as well as vice versa.

Sat Apr  9 13:30:16 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po, po/man-db.pot,
	  po/*.po: Update.

Sat Apr  9 13:21:08 BST 2011  Colin Watson  <cjwatson@debian.org>

	Upgrade to Libtool 2.4.

Sat Apr  9 12:56:02 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (Controlling formatted output): Wrap first cell
	  in --ascii translation table.
	* man/man8/mandb.man8 (DATABASE CACHES): Wrap second cell in
	  database type table.
	* man/po4a/Locale/Po4a/Manext.pm (shiftline): Fix T} detection.
	* man/po4a/po/ru.po: Don't translate "\\*[softhyphen]".

Sat Apr  9 11:52:20 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (DESCRIPTION): Typeset ellipses in roman rather
	  than bold (thanks, David Prévot).
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.
	  Manually unfuzzy translations.

Sat Apr  9 11:42:51 BST 2011  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.
	* po/pl.po: Likewise.

Sat Apr  9 11:38:52 BST 2011  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Thu Apr  7 12:46:34 BST 2011  Colin Watson  <cjwatson@debian.org>

	* lib/cleanup.c (do_cleanups): Set tos and nslots to 0 before
	  freeing stack, in case do_cleanups_sigsafe is called again from a
	  signal handler (Fedora bug #694332).
	* NEWS: Document this.

Sat Apr  2 12:20:30 BST 2011  David Prévot  <david@tilapin.org>
